// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SubagentProgressDisplay /> > renders "Request cancelled." with the info icon 1`] = `
"Running subagent TestAgent...

ℹ  Request cancelled.
"
`;

exports[`<SubagentProgressDisplay /> > renders cancelled state correctly 1`] = `
"Subagent TestAgent was cancelled.
"
`;

exports[`<SubagentProgressDisplay /> > renders correctly with command fallback 1`] = `
"Running subagent TestAgent...

⠋  run_shell_command echo hello
"
`;

exports[`<SubagentProgressDisplay /> > renders correctly with description in args 1`] = `
"Running subagent TestAgent...

⠋  run_shell_command Say hello
"
`;

exports[`<SubagentProgressDisplay /> > renders correctly with displayName and description from item 1`] = `
"Running subagent TestAgent...

⠋  RunShellCommand Executing echo hello
"
`;

exports[`<SubagentProgressDisplay /> > renders correctly with file_path 1`] = `
"Running subagent TestAgent...

✓  write_file /tmp/test.txt
"
`;

exports[`<SubagentProgressDisplay /> > renders error tool status correctly 1`] = `
"Running subagent TestAgent...

x  run_shell_command echo hello
"
`;

exports[`<SubagentProgressDisplay /> > renders thought bubbles correctly 1`] = `
"Running subagent TestAgent...

💭 Thinking about life
"
`;

exports[`<SubagentProgressDisplay /> > truncates long args 1`] = `
"Running subagent TestAgent...

⠋  run_shell_command This is a very long description that should definitely be tr...
"
`;
